--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,10 @@ layout: default
 
 <div class="post">
   <div class="post-info">
-    <span>Written by</span>
+    {% if page.profile_img %}
+        <img src="{{ page.profile_img }}" style="display: inline-block; width: 80px; height: 80px; border-radius: 50%;"><br>
+    {% endif %}
+    <span>작성자 by</span>
     {% if page.author %}
         {{ page.author }}
     {% else %}
