업데이트 수정

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,9 @@
           <h2 class="nav-title">{{ site.title }}</h2>
         </a>
         <ul>
+          <li><a href="{{ '/about' | prepend: site.baseurl }}/">소개</a></li>
           <li><a href="{{ site.baseurl }}/">블로그</a></li>
-          <li><a href="{{ '/about' | prepend: site.baseurl }}">채용정보</a></li>
+          <li><a href="{{ '/recruit' | prepend: site.baseurl }}">채용정보</a></li>
         </ul>
     </div>
   </nav>
@@ -22,7 +23,7 @@
 
     <footer>
       <span>
-        &copy; Copyright © 2017 Gtention. All rights reserved.
+        &copy; Copyright © 2017 8DAYS. All rights reserved.
       </span>
     </footer>
   </body>
