--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,7 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.png">
   <style>
       .user_thumb {
         display: inline-block;
