--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <nav class="nav">
       <div class="nav-container">
         <a href="{{ site.baseurl }}/">
-          <!--<h2 class="nav-title"><img src="{{ site.baseurl }}/favicon.png" style="display: inline-block; margin:0">//--> {{ site.title }}</h2>
+          <h3><font color="#f1876e">8DAYS</font> {{ site.title }}</h3>
         </a>
         <ul>
           <li><a href="{{ '/about' | prepend: site.baseurl }}/">소개</a></li>
