add comment disque

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <nav class="nav">
       <div class="nav-container">
         <a href="{{ site.baseurl }}/">
-          <h3><font color="#f1876e">8DAYS</font> {{ site.title }}</h3>
+          <h1><font color="#ddd">8DAYS</font> {{ site.title }}</h1>
         </a>
         <ul>
           <li><a href="{{ '/about' | prepend: site.baseurl }}/">소개</a></li>
